@@ -50,5 +50,6 @@
 	<include file="0.4/2018-02-09--add_seller_info_to_parsed_data.xml" relativeToChangelogFile="true" />
 	<include file="0.4/2018-03-11--series_remove_currency_fields.xml" relativeToChangelogFile="true" />
 	<include file="0.4/2018-06-09--add_number_of_stamps_to_collections_series.xml" relativeToChangelogFile="true" />
+	<include file="0.4/2018-06-15--add_price_to_collections_series.xml" relativeToChangelogFile="true" />
 	
 </databaseChangeLog>
