@@ -1,0 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<databaseChangeLog
+		xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
+		http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+	
+	<changeSet id="add-price-and-currency-fields-to-collections_series" author="php-coder" context="scheme">
+		
+		<addColumn tableName="collections_series">
+			<column name="price" type="DECIMAL(19,2)" />
+			<column name="currency" type="CHAR(3)" />
+		</addColumn>
+		
+	</changeSet>
+	
+</databaseChangeLog>
