@@ -136,6 +136,7 @@ t_yes = Yes
 t_no = No
 t_series_not_in_collection = Series isn't part of your collection
 t_i_have = I have
+t_i_bought_for = I bought for
 t_out_of_n_stamps = out of {0} stamps
 t_series_in_collection = Series is part of your collection
 t_add_to_collection = Add to collection
