@@ -135,6 +135,7 @@ t_yes = Да
 t_no = Нет
 t_series_not_in_collection = Этой серии нет в вашей коллекции
 t_i_have = У меня есть
+t_i_bought_for = Я купил за
 t_out_of_n_stamps = из {0} марок
 t_series_in_collection = Эта серия есть в вашей коллекции
 t_add_to_collection = Добавить в коллекцию
