@@ -55,10 +55,18 @@ SELECT COUNT(*) \
 
 collection.add_series_to_collection = \
 INSERT \
-  INTO collections_series(collection_id, series_id, number_of_stamps) \
+  INTO collections_series \
+     ( collection_id \
+     , series_id \
+     , number_of_stamps \
+     , price \
+     , currency \
+     ) \
 SELECT c.id AS collection_id \
       , :series_id AS series_id \
       , :number_of_stamps AS number_of_stamps \
+      , :price as price \
+      , :currency as currency \
   FROM collections c \
  WHERE c.user_id = :user_id
 
